--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -18,11 +18,12 @@
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/statusbar_settings_title">
 		
-		<com.android.settings.preference.SystemSettingSwitchPreference
-            android:key="status_bar_quick_qs_pulldown"
-            android:title="@string/status_bar_quick_qs_pulldown_title"
-            android:summary="@string/status_bar_quick_qs_pulldown_summary"
-            android:defaultValue="true" />
+		<ListPreference
+            android:key="quick_pulldown"
+            android:title="@string/quick_pulldown_title"
+            android:entries="@array/quick_pulldown_entries"
+            android:entryValues="@array/quick_pulldown_values"
+            android:persistent="false" />
 		
 		<ListPreference
             android:key="smart_pulldown"
