--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -164,6 +164,10 @@
     <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
     <string name="expanded_desktop_title">Expanded desktop options</string>
 	
+	<!-- Navbar tuner -->
+    <string name="navbar_tuner_title">Navbar tuner</string>
+    <string name="navbar_tuner_summary">Customize buttons and layout</string>
+	
 	<!-- Advanced storage settings -->
    <string name="storage_advanced_titlebar">Advanced Storage</string>
    <string name="storage_menu_advanced">Advanced</string>
@@ -372,6 +376,10 @@
     <string name="smart_pulldown_none">no notifications</string>
     <string name="smart_pulldown_dismissable">no dismissable</string>
     <string name="smart_pulldown_ongoing">no ongoing</string>
+	
+	<!-- Preference to show/hide embedded battery percentage [CHAR LIMIT=50] -->
+    <string name="show_battery_percentage">Show battery percentage</string>
+    <string name="show_battery_percentage_summary">Show battery percentage when not charging</string>
 	
 	<!-- Quick Settings -->
 	<string name="quick_settings_title">Quick settings</string>
