--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -363,7 +363,7 @@
     <string name="quick_pulldown_title">Discesa rapida</string>
     <string name="quick_pulldown_summary">Il bordo %1$s della barra di stato tira giù le impostazioni rapide</string>
     <string name="quick_pulldown_summary_always">Mostra sempre le impostazioni rapide sulla barra di stato a tendina</string>
-    <string name="quick_pulldown_off">Spento</string>
+    <string name="quick_pulldown_off">Non attiva</string>
     <string name="quick_pulldown_left">Sinistra</string>
     <string name="quick_pulldown_right">Destra</string>
     <string name="quick_pulldown_always">Sempre</string>
@@ -372,7 +372,7 @@
     <string name="smart_pulldown_title">Discesa intelligente</string>
     <string name="smart_pulldown_summary">Apri le impostazioni rapide quando ci sono %1$s notifiche presenti</string>
     <string name="smart_pulldown_none_summary">Aprire le impostazioni rapide quando non sono presenti notifiche</string>
-    <string name="smart_pulldown_off">Spenta</string>
+    <string name="smart_pulldown_off">Non attiva</string>
     <string name="smart_pulldown_none">Nessuna notifica</string>
     <string name="smart_pulldown_dismissable">Non rimovibili</string>
     <string name="smart_pulldown_ongoing">Non in corso</string>
