--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -38,7 +38,7 @@
     <string name="vendor_version">Vendor version</string>
     <string name="vendor_version_default">Unknown</string>
 	<!-- Build number default -->
-	<string name="build_number_fallback">CNRQAA-R1</string>
+	<string name="build_number_fallback">CNRQAA-Release 2</string>
     <!-- Build date -->
     <string name="build_date">Build date</string>
     <string name="build_date_default">2014-01-01-0000</string>
